--- a/Aula 5/ToDoList/package.json
+++ b/Aula 5/ToDoList/package.json
@@ -5,13 +5,14 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js",  
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ronaldo Borges",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "ejs": "latest",
+    "express": "latest",
+    "uuid": "^13.0.0"
   }
 }
