--- a/Aula 5/ToDoList/tasks.json
+++ b/Aula 5/ToDoList/tasks.json
@@ -5,13 +5,18 @@
         "completed": true
     },
     {
-        "id": 2,
-        "title": "Estudar Express",
-        "completed": true
-    },
-    {
         "id": 3,
         "title": "Estudar JavaScript",
         "completed": true
+    },
+    {
+        "id": 1758061681754,
+        "title": "Estudar REACT + REST",
+        "completed": false
+    },
+    {
+        "id": "747d49ec-fc68-4cef-b639-ccae86f2f096",
+        "title": "Explicar pq o \"import...from\" não funcionou.",
+        "completed": false
     }
 ]
