--- a/Aula 6/API_Rest+Autenticacao/package.json
+++ b/Aula 6/API_Rest+Autenticacao/package.json
@@ -11,6 +11,7 @@
   "author": "Ronaldo Borges",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.18.2"
   }
 }
